# consensus-builder

./: .gitignore  .gitmodules  3d-terrain-fitting.md  BACKLOG.md  BUILDINGS-3D-PERFORMANCE.md  JLZ.txt  MEMORY.md  MILESTONES-CANTON.md  OG-IMAGE-PLAN.md  SSC post.txt  TEST.md  TODO-blockchain.txt  TODO-old.txt  TODO-parcel-blocks.txt  TODO-proposals.txt  TODO-roads-tracks.txt  TODO-roads.txt  TODO-tests.txt  TODO-urban-rules.txt  TODO-users.txt  TODO.txt  URBAN-RULE-BLOCKS-ROADMAP.md  WALRUS.md  advanced-readjustment.md  algorithmic-corridors.md  area-monitor.md  braindump.md  canton-backlog.md  corridor-elevation.md  demo-video-scripts.txt  dev.sh  dkp_nacini_uporabe_privedeno.txt  docker-compose.yml  elevation-realism.md  feature-daml-readme.md  feature-daml.md  feature-ens-readme.md  feature-ens.md  feature-proposal-execution.md  feature-proposal-goals.md  (+15 more)
.github/: copilot-instructions.md
backend/: .gitignore  Dockerfile  deploy-backend.sh  deploy-to-server.sh  ecosystem.config.cjs  fetch-parcels.js  index.js  load-urban-rules.js  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  pravila.js  progress.html  vitest.config.js
blockchain/: .gitignore  ParcelNFT.sol  ProposalNFT.sol  TODO-blockchain.txt  foundry.toml  gasReporterOutput.json  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
blockchain/solana/programs/parcel_nft/: Cargo.toml
blockchain/solana/programs/parcel_nft/src/: lib.rs
blockchain/solana/programs/proposal_nft/: Cargo.toml
blockchain/solana/programs/proposal_nft/src/: lib.rs
db/: parcel.sql  (+1 more)
(+785 files in other folders)
