[package]
name = "parcel_nft"
version = "0.1.0"
description = "Urban Game Theory Parcel NFT - Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "parcel_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
